--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.38"
+clap = { version = "3.2.25", features = ["derive"] }
 colored = "2.1.0"
 ev3dev-lang-rust = "0.14.0"
 paris = { version = "1.5", features = ["no_logger","timestamps","macros"] }
