--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ chrono = "0.4.38"
 clap = { version = "3.2.25", features = ["derive"] }
 colored = "2.1.0"
 ev3dev-lang-rust = "0.14.0"
+kewb = "0.4.2"
 paris = { version = "1.5", features = ["no_logger","timestamps","macros"] }
 rand = "0.8.5"
 
