Added a new bruteforce fixer that has better chance of success than the old one. (with associated tests)

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,3 +3,6 @@ target = "armv5te-unknown-linux-musleabi"
 
 [target.armv5te-unknown-linux-musleabi]
 linker = "rust-lld"
+
+[profile.dev]
+opt-level = 3               # Use all optis.
