--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 chrono = "0.4.38"
 clap = { version = "4.5.4", features = ["derive"] }
 colored = "2.1.0"
+ctrlc = "3.4.4"
 ev3dev-lang-rust = "0.14.0"
 itertools = "0.13.0"
 kewb = "0.4.2"
